--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
     font-family: Nerko One, sans-serif;
     font-weight: 500;
     color: green;
-    margin-left: 30px;
+    
 }
 
 /* headings and logo */
@@ -56,4 +56,12 @@ h1,h2 {
 
 .active {
     color: greenyellow;
+}
+
+/* hero image */
+
+#hero-image {
+    height: 600px;
+    width: 100%px;
+    background: url('../images/pexels-lisa-fotios-1314133.jpg') no-repeat;
 }
