--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,10 +58,18 @@ h1,h2 {
     color: greenyellow;
 }
 
-/* hero image */
+/* homepage image */
 
-#hero-image {
+#homepage-outer {
     height: 600px;
-    width: 100%px;
-    background: url('../images/pexels-lisa-fotios-1314133.jpg') no-repeat;
+    width: 100%;
+    overflow: hidden;
+
 }
+
+#homepage-image {
+    height: 600px;
+    width: 100%;
+    background: url('../images/pexels-lisa-fotios-13141331.jpg') no-repeat center center;
+}
+
