center cacti menu h2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,9 +196,8 @@ p {
     text-align: center;
 }
 
-.cacti-menu-heading h2 {
+.cacti-heading {
     text-align: center;
-    
 }
 
 /* Opening Times*/
