--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Nerko One');
-@import url('https://fonts.googleapis.com/css?family=Klee One');
+@import url('https://fonts.googleapis.com/css?family="Nerko One"');
+@import url('https://fonts.googleapis.com/css?family="Klee One"');
 
 * {
     margin: 0;
