Add %7c to seperate google fonts as piping character does not conform to URL Living Standard (which is what the HTML5 CR cites) and by the Internet-standard STD 66 (RFC 3986)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Nerko One');
-@import url('https://fonts.googleapis.com/css?family=Klee One');
+@import url('https://fonts.googleapis.com/css?family=Nerko One%7cKlee One');
 
 * {
     margin: 0;
