add + symbol in blank spaces for google fonts

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Nerko One%7cKlee One');
+@import url('https://fonts.googleapis.com/css?family=Nerko+One%7CKlee+One');
 
 * {
     margin: 0;
